# serializer version: 1
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.1
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.2
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.3
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.4
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.5
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE (UPPER(("clairview_person"."properties" ->> 'urls')::text) LIKE UPPER('%["abcd"]%')
         AND "clairview_person"."properties" ? 'urls'
         AND NOT (("clairview_person"."properties" -> 'urls') = 'null'::jsonb)
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.6
  '''
  SELECT "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."person_id" = 2
         AND "clairview_persondistinctid"."team_id" = 2)
  ORDER BY "clairview_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE (UPPER(("clairview_person"."properties" ->> '$key')::text) LIKE UPPER('%[''red'']%')
         AND "clairview_person"."properties" ? '$key'
         AND NOT (("clairview_person"."properties" -> '$key') = 'null'::jsonb)
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value.1
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE (UPPER(("clairview_person"."properties" ->> '$key')::text) LIKE UPPER('%red%')
         AND "clairview_person"."properties" ? '$key'
         AND NOT (("clairview_person"."properties" -> '$key') = 'null'::jsonb)
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date
  '''
  SELECT 1 AS "a"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'example_id'
         AND "clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'created_at') > '["2m", "3d"]'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date.1
  '''
  SELECT 1 AS "a"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'example_id'
         AND "clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'created_at') > '"bazinga"'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  ORDER BY "clairview_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.1
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE (((("clairview_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "clairview_person"."properties" ? 'url'
           AND NOT (("clairview_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("clairview_person"."properties" -> 'bla') = '1'::jsonb
           AND "clairview_person"."properties" ? 'bla'
           AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ((("clairview_person"."properties" -> 'bla') = '1'::jsonb
                 AND "clairview_person"."properties" ? 'bla'
                 AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb))
                OR (("clairview_person"."properties" -> 'bla') = '2'::jsonb
                    AND "clairview_person"."properties" ? 'bla'
                    AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb))))
          OR (("clairview_person"."properties" -> 'bla') = '3'::jsonb
              AND "clairview_person"."properties" ? 'bla'
              AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.2
  '''
  SELECT "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."person_id" = 2
         AND "clairview_persondistinctid"."team_id" = 2)
  ORDER BY "clairview_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.3
  '''
  SELECT "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."person_id" = 2
         AND "clairview_persondistinctid"."team_id" = 2)
  ORDER BY "clairview_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  ORDER BY "clairview_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.1
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE (((("clairview_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "clairview_person"."properties" ? 'url'
           AND NOT (("clairview_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("clairview_person"."properties" -> 'bla') = '1'::jsonb
           AND "clairview_person"."properties" ? 'bla'
           AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("clairview_person"."properties" -> 'bla') = '1'::jsonb
           AND "clairview_person"."properties" ? 'bla'
           AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("clairview_person"."properties" -> 'bla') = '2'::jsonb
           AND "clairview_person"."properties" ? 'bla'
           AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb))
          OR (("clairview_person"."properties" -> 'bla') = '3'::jsonb
              AND "clairview_person"."properties" ? 'bla'
              AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.2
  '''
  SELECT "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."person_id" = 2
         AND "clairview_persondistinctid"."team_id" = 2)
  ORDER BY "clairview_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  ORDER BY "clairview_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.1
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  ORDER BY "clairview_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.2
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  ORDER BY "clairview_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.3
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  ORDER BY "clairview_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.4
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE (NOT ((("clairview_person"."properties" -> 'bla') = '1'::jsonb
               AND "clairview_person"."properties" ? 'bla'
               AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb))
              OR (("clairview_person"."properties" -> 'bla') = '2'::jsonb
                  AND "clairview_person"."properties" ? 'bla'
                  AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND NOT ((("clairview_person"."properties" -> 'bla') = '3'::jsonb
                   AND "clairview_person"."properties" ? 'bla'
                   AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb))
                  OR (("clairview_person"."properties" -> 'bla') = '4'::jsonb
                      AND "clairview_person"."properties" ? 'bla'
                      AND NOT (("clairview_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND ("clairview_person"."properties" -> 'other') = '1'::jsonb
         AND "clairview_person"."properties" ? 'other'
         AND NOT (("clairview_person"."properties" -> 'other') = 'null'::jsonb)
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.5
  '''
  SELECT "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."person_id" = 2
         AND "clairview_persondistinctid"."team_id" = 2)
  ORDER BY "clairview_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.6
  '''
  SELECT "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."person_id" = 2
         AND "clairview_persondistinctid"."team_id" = 2)
  ORDER BY "clairview_persondistinctid"."id" ASC
  '''
# ---
